<resources>
    <string name="app_name">DesafioAndroid</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="or">or</string>
    <string name="log_in">log in</string>
    <string name="register">register</string>
    <string name="nome">nome</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
